@@ -3,6 +3,7 @@ This file documents the revision history for mod_gearman.
 1.3.6 not yet released
           - allow gearman_top to display multiple servers (Thomas Dohl)
           - fixed typo in 'timeout_return' docs
+          - added send_gearman.pl (Vincent Candeau)
           - Bugfixes:
             - removed newlines in perllib breaking build on opensuse
 
